@@ -27,7 +27,7 @@ import contextlib
 from gaupol import const
 from gaupol.base import Contractual
 from gaupol.calculator import Calculator
-from ._subfile import SubtitleFile
+from .subfile import SubtitleFile
 
 
 class TMPlayer(SubtitleFile):
