@@ -23,7 +23,7 @@ import gtk
 
 from gaupol.gtk.i18n import _
 from gaupol.gtk.index import *
-from ._action import UIMAction
+from .action import UIMAction
 
 
 class ClearTextsAction(UIMAction):
