@@ -24,7 +24,7 @@ import gtk
 from gaupol.gtk import conf
 from gaupol.gtk.i18n import _
 from gaupol.gtk.index import *
-from ._action import UIMAction
+from .action import UIMAction
 
 
 class AdjustDurationsAction(UIMAction):
