@@ -23,7 +23,7 @@ import gtk
 
 from gaupol.gtk import conf, util
 from gaupol.gtk.i18n import _
-from ._action import UIMAction
+from .action import UIMAction
 
 
 class ConfigureSpellCheckAction(UIMAction):
