@@ -21,7 +21,7 @@
 
 from gaupol.gtk import conf, const
 from gaupol.gtk.i18n import _
-from ._action import UIMAction
+from .action import UIMAction
 
 
 class ActivateNextProjectAction(UIMAction):
